Minor changes for blog routes
